EDGE-307 PVC resource collector
